--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,5 +1,5 @@
 node {
-    docker.image('node:lts-buster-slim').withRun('-p 3001:3000') {
+    docker.image('node:16-buster-slim').withRun('-p 3001:3000') {
         env.CI = 'true'
 
         stage('Build') {
