--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,19 +1,24 @@
-node {
-    docker.image('node:16-buster-slim').withRun('-p 3001:3000') {
-        env.CI = 'true'
-
+pipeline {
+    agent {
+        docker {
+            image 'node:lts-buster-slim'
+            args '-p 3000:3000'
+        }
+    }
+    environment {
+        CI = 'true'
+    }
+    stages {
         stage('Build') {
             steps {
                 sh 'npm install'
             }
         }
-        
         stage('Test') {
             steps {
                 sh './jenkins/scripts/test.sh'
             }
         }
-        
         stage('Deliver') {
             steps {
                 sh './jenkins/scripts/deliver.sh'
