--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,24 +1,19 @@
-pipeline {
-    agent {
-        docker {
-            image 'node:lts-buster-slim'
-            args '-p 3000:3000'
-        }
-    }
-    environment {
-        CI = 'true'
-    }
-    stages {
+node {
+    docker.image('node:lts-buster-slim').withRun('-p 3000:3000') {
+        env.CI = 'true'
+
         stage('Build') {
             steps {
                 sh 'npm install'
             }
         }
+
         stage('Test') {
             steps {
                 sh './jenkins/scripts/test.sh'
             }
         }
+
         stage('Deliver') {
             steps {
                 sh './jenkins/scripts/deliver.sh'
