--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,24 +1,26 @@
-node {
-    docker.image('node:lts-buster-slim').withRun('-p 3000:3000') {
-        env.CI = 'true'
-
+pipeline {
+    agent {
+        docker {
+            image 'node:16-buster-slim'
+            args '-p 3000:3000'
+        }
+    }
+    stages {
         stage('Build') {
             steps {
                 sh 'npm install'
             }
         }
-
         stage('Test') {
             steps {
                 sh './jenkins/scripts/test.sh'
             }
         }
-
-        stage('Deliver') {
+        stage('Deploy') { 
             steps {
-                sh './jenkins/scripts/deliver.sh'
-                input message: 'Finished using the website?? (Click "Proceed" to continue)'
-                sh './jenkins/scripts/kill.sh'
+                sh './jenkins/scripts/deliver.sh' 
+                input message: 'Sudah selesai menggunakan React App? (Klik "Proceed" untuk mengakhiri)' 
+                sh './jenkins/scripts/kill.sh' 
             }
         }
     }
