--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -18,8 +18,9 @@ pipeline {
         }
         stage('Deploy') { 
             steps {
-                sh './jenkins/scripts/deliver.sh' 
-                input message: 'Sudah selesai menggunakan React App? (Klik "Proceed" untuk mengakhiri)' 
+                sh './jenkins/scripts/deliver.sh'
+                echo 'tunggu 1 menit baru end app' 
+                sleep time: 1, unit: 'MINUTES'
                 sh './jenkins/scripts/kill.sh' 
             }
         }
