--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -18,9 +18,8 @@ pipeline {
         }
         stage('Deploy') { 
             steps {
-                sh './jenkins/scripts/deliver.sh'
-                echo 'tunggu 1 menit baru end app' 
-                sleep time: 1, unit: 'MINUTES'
+                sh './jenkins/scripts/deliver.sh' 
+                sleep(secs: 60, unit: 'SECONDS')
                 sh './jenkins/scripts/kill.sh' 
             }
         }
